--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <!-- Large Image -->
     <div class="large-image">
-        <img src="image/gambarindex.webp" alt="Banner Besar">
+        <img src="Image/gambarindex.webp" alt="Banner Besar">
     </div>
 
     <!-- Feature Section -->
